--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
-  /* background: #efefbb; */
-  background: linear-gradient(to right, rgb(242, 238, 6), rgb(203, 18, 18));
+  background: rgb(34,195,119);
+  background: radial-gradient(circle, rgba(34,195,119,0.9233893386456145) 0%, rgba(92,68,193,0.9514005431274072) 50%, rgba(253,45,45,0.6936974618949142) 100%); 
   color: white;
   margin: 0;
   font-family: rubik;
@@ -106,6 +106,10 @@ h1 {
   background-color: #f5f5f5;
 }
 
+.ghost {
+  background-color: #f0e7fa;
+}
+
 .card:hover {
   animation: bounce 0.5s linear;
 }
@@ -147,8 +151,3 @@ h1 {
     transform: translateY(0);
   }
 }
-
-/* .ghost { 
-  background-color: #21004128;
-}
- */
